タイポ修正

--- a/soukou_freeze/index.html
+++ b/soukou_freeze/index.html
@@ -37,7 +37,7 @@
 	  <a class="btn btn-primary btn-lg btn-block" role="button" href="win10">Windows 10 自宅ネットワーク無し</a>
 	  <a class="btn btn-primary btn-lg btn-block" role="button" href="win10+lan">Windows 10 自宅ネットワーク有り</a>
 	  <a class="btn btn-primary btn-lg btn-block" role="button" href="macs">Mac 自宅ネットワーク無し</a>
-	  <a class="btn btn-primary btn-lg btn-block" role="button" href="macs+lan">Mac 自宅ネットワーク有りc</a>
+	  <a class="btn btn-primary btn-lg btn-block" role="button" href="macs+lan">Mac 自宅ネットワーク有り</a>
 	  <a class="btn btn-primary btn-lg btn-block" role="button" href="win10_en">Windows 10 (in English)</a>
 	</div>
       </div>
