--- a/soukou_freeze/index.html
+++ b/soukou_freeze/index.html
@@ -38,7 +38,8 @@
 	  <a class="btn btn-primary btn-lg btn-block" role="button" href="win10+lan">Windows 10 自宅ネットワーク有り</a>
 	  <a class="btn btn-primary btn-lg btn-block" role="button" href="macs">Mac 自宅ネットワーク無し</a>
 	  <a class="btn btn-primary btn-lg btn-block" role="button" href="macs+lan">Mac 自宅ネットワーク有り</a>
-	  <a class="btn btn-primary btn-lg btn-block" role="button" href="win10_en">Windows 10 (in English)</a>
+	  <a class="btn btn-primary btn-lg btn-block" role="button" href="win10_en">Windows 10 without the Internetworking at your home (in English)</a>
+	  <a class="btn btn-primary btn-lg btn-block" role="button" href="win10+lan_en">Windows 10 with the Internetworking at your home (in English)</a>
 	</div>
       </div>
 
