--- a/soukou_freeze/index.html
+++ b/soukou_freeze/index.html
@@ -85,7 +85,7 @@
 		<li><a href="http://vsign.jp/hiroshima/study">
 		    広島大学生協 勉学研究・学びの充実のために</a></li>
 		<li><a href="https://portal.office.com/">
-		    Offce365</a></li>
+		    Office365</a></li>
 		<li><a href="https://f3s.riise.hiroshima-u.ac.jp//">
 		    F3S講習会 (学生向けの必携PCを活用する講習会）</a></li>
 		<li><a href="https://www.media.hiroshima-u.ac.jp/">
