update the list of available manuals.

--- a/soukou_freeze/index.html
+++ b/soukou_freeze/index.html
@@ -34,12 +34,11 @@
       <!-- ====================================================================== -->
       <div class="row">
         <div class="col-sm-12">
-	  <a class="btn btn-primary btn-lg btn-block" role="button" href="win10">Windows 10 自宅ネットワーク無し</a>
-	  <a class="btn btn-primary btn-lg btn-block" role="button" href="win10+lan">Windows 10 自宅ネットワーク有り</a>
-	  <a class="btn btn-primary btn-lg btn-block" role="button" href="macs">Mac 自宅ネットワーク無し</a>
-	  <a class="btn btn-primary btn-lg btn-block" role="button" href="macs+lan">Mac 自宅ネットワーク有り</a>
-	  <a class="btn btn-primary btn-lg btn-block" role="button" href="win10_en">Windows 10 without the Internetworking at your home (in English)</a>
-	  <a class="btn btn-primary btn-lg btn-block" role="button" href="win10+lan_en">Windows 10 with the Internetworking at your home (in English)</a>
+	  <a class="btn btn-primary btn-lg btn-block" role="button" href="win10">Windows 10</a>
+	  <a class="btn btn-primary btn-lg btn-block" role="button" href="win10_en">Windows 10 (English)</a>
+	  <a class="btn btn-primary btn-lg btn-block" role="button" href="win11">Windows 11</a>
+	  <a class="btn btn-primary btn-lg btn-block" role="button" href="win11_en">Windows 11 (English)</a>
+	  <a class="btn btn-primary btn-lg btn-block" role="button" href="macs+lan">Mac</a>
 	</div>
       </div>
 
