--- a/soukou_freeze/index.html
+++ b/soukou_freeze/index.html
@@ -34,11 +34,11 @@
       <!-- ====================================================================== -->
       <div class="row">
         <div class="col-sm-12">
-	  <a class="btn btn-primary btn-lg btn-block" role="button" href="win10">Windows 10</a>
+	  <a class="btn btn-primary btn-lg btn-block" role="button" href="win10">Windows 10 (日本語)</a>
 	  <a class="btn btn-primary btn-lg btn-block" role="button" href="win10_en">Windows 10 (English)</a>
-	  <a class="btn btn-primary btn-lg btn-block" role="button" href="win11">Windows 11</a>
+	  <a class="btn btn-primary btn-lg btn-block" role="button" href="win11">Windows 11 (日本語)</a>
 	  <a class="btn btn-primary btn-lg btn-block" role="button" href="win11_en">Windows 11 (English)</a>
-	  <a class="btn btn-primary btn-lg btn-block" role="button" href="macs+lan">Mac</a>
+	  <a class="btn btn-primary btn-lg btn-block" role="button" href="macs+lan">Mac (日本語)</a>
 	</div>
       </div>
 
