--- a/soukou_freeze/index.html
+++ b/soukou_freeze/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>FRESTA-TEXT-2022</title>
+    <title>FRESTA-TEXT-2023</title>
 
     <!-- Bootstrap -->
     <link href="win10/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -23,8 +23,7 @@
       <div class="container">
 
       <h3>広島大学</h3>
-	<h1>2022年度 必携PC初期設定手順資料</h1>
-
+	<h1>2023年度 必携PC初期設定手順資料 （準備中）</h1>
 
       </div>
     </div>
