「(準備中)」を削除

--- a/soukou_freeze/index.html
+++ b/soukou_freeze/index.html
@@ -23,7 +23,7 @@
       <div class="container">
 
       <h3>広島大学</h3>
-	<h1>2023年度 必携PC初期設定手順資料 （準備中）</h1>
+	<h1>2023年度 必携PC初期設定手順資料</h1>
 
       </div>
     </div>
